Added the identification of the working folder Now the code looks into the work folder and finds all the files ending with extension and stores them into options Future work now include to allocate the steps and then open each file and load the particles This is getting close to nice stuff

--- a/src/Makefile
+++ b/src/Makefile
@@ -1,9 +1,9 @@
 CC = g++
 CFLAGS =  -g -Wall -funroll-loops -fstrict-aliasing -Wall -W -Wno-uninitialized
-EXEC_NAME = main
+EXEC_NAME = fsaplf
 INCLUDES = 
-LIBS =
-OBJ_FILES = main.o library.o particles.o terminal.o options.o 
+LIBS = -lboost_system -lboost_filesystem
+OBJ_FILES = main.o library.o particles.o terminal.o options.o steps.o 
 INSTALL_DIR = ../
 
 all : $(EXEC_NAME)
