Changes I don't remember (bad Bruno) Before implementation of the cylindrical porosity profiles

--- a/src/Makefile
+++ b/src/Makefile
@@ -1,10 +1,10 @@
-CC = g++
-CFLAGS =  -O2 -funroll-loops -fstrict-aliasing -Wall -W -Wno-uninitialized
+CC = g++ -fopenmp
+CFLAGS =  -O2 -funroll-loops -fstrict-aliasing -Wall -W -Wno-uninitialized 
 EXEC_NAME = fsaplf
 INCLUDES = 
 LIBS = -lboost_system -lboost_filesystem
-OBJ_FILES = main.o particles.o terminal.o options.o steps.o averaging.o boxes.o plane.o writing.o 
-INSTALL_DIR = ../test/
+OBJ_FILES = main.o particles.o terminal.o options.o steps.o averaging.o boxes.o plane.o writing.o trajectories.o 
+INSTALL_DIR = ../../test/
 
 all : $(EXEC_NAME)
 
