--- a/src/Makefile
+++ b/src/Makefile
@@ -1,5 +1,5 @@
 CC = g++ -fopenmp
-CFLAGS =  -g -funroll-loops -fstrict-aliasing -Wall -W -Wno-uninitialized 
+CFLAGS =  -O2 -funroll-loops -fstrict-aliasing -Wall -W -Wno-uninitialized 
 EXEC_NAME = fsaplf
 INCLUDES = 
 LIBS = -lboost_system -lboost_filesystem -lboost_regex
